<resources>
    <string name="app_name">Dr.Sintomas</string>

    ------------ Tela Sintomas -------------
    <string name="hint_symptom">Separados por vírgula</string>
    <string name="informesintomas">Informe seus sintomas</string>
    <string name="list_option_search_title">Categoria médica</string>

    <string name="list_symptom_title">Sintomas</string>
    <string name="button_médicos">Ver médicos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_doencas">Doenças</string>

    ------------ Tela Diagnostico -------------
    <string name="causas">Causas:</string>
    <string name="sintomas">Sintomas:</string>
    <string name="prevencoes">Prevenções:</string>

    ------------ Tela Medicos -------------
    <string name="title_activity_medicos">Médicos</string>

    ------------ Tela Medico -------------
    <string name="title_activity_medico">Médico</string>
    <string name="informacoes_medico">Informações</string>
    <string name="endereco_medico">Endereço</string>
    <string name="button_mapa">Mapa de localização</string>

</resources>
