<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.SintomaActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingBottom="40dp">

        <ImageView
            android:layout_width="166dp"
            android:layout_height="149dp"
            android:src="@drawable/dr_sintomas"
            android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/informesintomas"
                android:textColor="@color/colorPrimary"
                android:id="@+id/textView2"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_sintoma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:hint="@string/hint_symptom"
                    android:layout_toStartOf="@+id/bt_pesquisar" />

                <ImageView
                    android:layout_width="29dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_pesquisar"
                    android:layout_alignBottom="@+id/et_sintoma"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/lupa" />

            </LinearLayout>

        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
