<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:parentActivityName=".activities.SintomaActivity"
    android:background="@color/colorAccent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/Mytoolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll"></android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:paddingTop="30dp"
                android:textSize="20sp"
                android:text=""
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewCausas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:paddingTop="30dp"
                android:textSize="20sp"
                android:text="@string/causas"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewCausasT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text=""
                android:textColor="@color/colorPrimary" />


            <TextView
                android:id="@+id/textViewSintomas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:paddingTop="30dp"
                android:textSize="20sp"
                android:text="@string/sintomas"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewSintomasL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:text=""
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewPrevencoes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:paddingTop="30dp"
                android:textSize="20sp"
                android:text="@string/prevencoes"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewPrevencoesL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="phone|email|web"
                android:linksClickable="true"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:text=""
                android:textColor="@color/colorPrimary" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_médicos"
                android:id="@+id/button_medicos"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>